QOL changes pt 2

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: framework
     {%- include features.html -%}
     {%- include affiliants.html -%}
     {%- include services.html -%}
-    {%- include team.html -%}
+    {%- include team-index.html -%}
     {%- include contact-full.html -%}
 </div>
 {%- include footer.html -%}
