--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@ layout: framework
         <div class="container">
   
           <div class="d-flex justify-content-between align-items-center">
-            <h2>About Us</h2>
+            <h2>{{page.title}}</h2>
             <ol>
               <li><a href="index.html">Home</a></li>
-              <li>About Us</li>
+              <li>{{page.title}}</li>
             </ol>
           </div>
   
