--- a/contact-card.html
+++ b/contact-card.html
@@ -20,21 +20,21 @@ layout: framework
                                 <p>2 - Sanders Parade, Greyhound Lane, Streatham, London SW16 5NL</p>
                             </div>
                         </a>
-                        <a href="mailto:info@aazizandco.co.uk">
+                        <a href="mailto:{{site.email}}">
                             <div class="email">
                                 <i class="icofont-envelope"></i>
                                 <h4>Email:</h4>
-                                <p>info@aazizandco.co.uk</p>
+                                <p>{{site.email}}</p>
                             </div>
                         </a>
                         <a href="tel:+442036599254">
                             <div class="phone">
                                 <i class="icofont-phone"></i>
                                 <h4>Call:</h4>
-                                <p>+44 20 3659 9254<br>+44 78 1044 8530</p>
+                                <p>+44 20 3659 9254<br>+44 739 2438 213</p>
                             </div>
                         </a>
-                        
+
                     </div>
                 </div>
                 <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch gmap-box">
